# blog-translator

./: .env.sample  .gitignore  README.md  config.py  pyproject.toml  wp_access_token.txt
src/: __init__.py  article_scraper.py  db.py  main.py  rss_fetcher.py  translator.py  wordpress.py
test/: run_test.sh  test_rss.py  test_translation.py  test_wordpress.py
